# meshlink

./: .gitignore  Makefile  README.md  WireGuard SD-WAN 项目规划.md
client/: Cargo.toml
client/crates/agent-core/: Cargo.toml
client/crates/agent-core/src/: lib.rs  signal.rs
client/crates/api-client/: Cargo.toml  build.rs
client/crates/api-client/src/: lib.rs
client/crates/cli/: Cargo.toml
client/crates/cli/src/: lib.rs
client/crates/holepunch/: Cargo.toml
client/crates/holepunch/src/: lib.rs
client/crates/netlink-linux/: Cargo.toml  build.rs
client/crates/netlink-linux/src/: lib.rs
client/crates/relay-client/: Cargo.toml
client/crates/relay-client/src/: lib.rs
client/crates/stun/: Cargo.toml
client/crates/stun/src/: lib.rs
client/crates/telemetry/: Cargo.toml
client/crates/telemetry/src/: lib.rs
client/crates/wg-manager/: Cargo.toml
client/crates/wg-manager/src/: lib.rs
client/crates/wintun-windows/: Cargo.toml
client/crates/wintun-windows/src/: lib.rs
deploy/docker-compose/: docker-compose.yml
deploy/examples/: bootstrap.env.example  client-b-config.toml  client-config.toml
deploy/systemd/: meshlink-client.service  meshlink-managementd.service
docs/: README.md
docs/adr/: 0001-monorepo-go-rust.md
docs/ai/: agent-context.md  delivery-checklist.md  module-boundaries.md  task-breakdown.md  task-files.md
docs/api/: service-contracts.md
docs/architecture/: control-plane.md  data-plane.md  repository-layout.md  system-overview.md
docs/roadmap/: execution-plan.md
docs/tasks/: index.yaml  phase-00-foundation.md  phase-01-bootstrap-connectivity.md  phase-02-client-discovery.md  phase-03-linux-direct-tunnel.md  phase-04-vm-lab-and-tests.md  progress.md  (+5 more)
proto/: common.proto  management.proto  relay.proto  signal.proto
scripts/: build-client.sh  build-server.sh  build-wireguard-windows-runtime.ps1  build-wireguard-windows-runtime.sh  fmt.sh  gen-proto.sh  lint.sh  package-deb.sh  package-windows.sh  test-e2e.sh
server/: Dockerfile  go.mod
(+80 files in other folders)
